--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
-BOT_TOKEN = "7379470459:AAHKyJPiCUeQBVm6m6affNYtpYWCb1Yj7dE"
-TELEGRAM_API = "22353942"
-TELEGRAM_HASH = "a71c2aa4f6b764734411512973e34763"
-OWNER_ID = "6643388068"
-DATABASE_URL = "mongodb+srv://Merge1:Merge@cluster0.k7ungxs.mongodb.net/"
+BOT_TOKEN = "6993336563:AAG0zsh0LrDWLxBtDfcB4bdyTyhdxvIr-Qo"
+TELEGRAM_API = "25695562"
+TELEGRAM_HASH = "0b691c3e86603a7e34aae0b5927d725a"
+OWNER_ID = "1895952308"
+DATABASE_URL = "mongodb+srv://pabagav476aersmcom:pabagav476aersmcom@cluster0.5jd4dlx.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 TORRENT_TIMEOUT = "0"
